--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(abouheif)
 export(check_tree)
 export(compare_chains)
+export(get_chisq)
 export(kendall)
 export(patristic)
 import(igraph)
@@ -12,5 +13,8 @@ importFrom(igraph,graph_from_data_frame)
 importFrom(igraph,is_connected)
 importFrom(igraph,is_dag)
 importFrom(stats,as.dist)
+importFrom(stats,chisq.test)
+importFrom(stats,fisher.test)
+importFrom(stats,xtabs)
 importFrom(treespace,findMRCIs)
 importFrom(vegan,adonis2)
