simplify analysis to run with multiple simulations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(abouheif)
 export(compare_chains)
+export(euclidean)
 export(get_chisq)
 export(kendall)
 export(patristic)
@@ -11,7 +12,8 @@ importFrom(igraph,distances)
 importFrom(igraph,graph_from_data_frame)
 importFrom(stats,as.dist)
 importFrom(stats,chisq.test)
+importFrom(stats,complete.cases)
 importFrom(stats,fisher.test)
-importFrom(stats,xtabs)
 importFrom(treespace,findMRCIs)
+importFrom(utils,combn)
 importFrom(vegan,adonis2)
