--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,24 @@ export(compare_chains)
 export(euclidean)
 export(get_chisq)
 export(kendall)
+export(make_tree)
 export(patristic)
+export(shuffle_graph_ids)
 export(validate_tree)
 import(igraph)
+importFrom(igraph,V)
+importFrom(igraph,as_long_data_frame)
 importFrom(igraph,distances)
 importFrom(igraph,graph_from_data_frame)
+importFrom(igraph,layout_as_tree)
+importFrom(igraph,make_graph)
+importFrom(igraph,permute)
+importFrom(igraph,vcount)
 importFrom(stats,as.dist)
 importFrom(stats,chisq.test)
 importFrom(stats,complete.cases)
 importFrom(stats,fisher.test)
+importFrom(stats,rpois)
 importFrom(treespace,findMRCIs)
 importFrom(utils,combn)
 importFrom(vegan,adonis2)
