--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,11 @@
 ^epitree\.Rproj$
 ^\.Rproj\.user$
+^doc$
+^Meta$
+^README\.Rmd$
+^LICENSE\.md$
+^_pkgdown\.yml$
+^docs$
+^pkgdown$
+^\.github$
+pkgdown/
