update docs & examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,11 @@ export(validate_tree)
 import(igraph)
 importFrom(igraph,V)
 importFrom(igraph,as_long_data_frame)
+importFrom(igraph,degree)
 importFrom(igraph,distances)
 importFrom(igraph,graph_from_data_frame)
+importFrom(igraph,is_connected)
+importFrom(igraph,is_dag)
 importFrom(igraph,layout_as_tree)
 importFrom(igraph,make_graph)
 importFrom(igraph,permute)
