--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: epitree
 Title: Statistical Comparison of Transmission and Phylogenetic Tree Distributions
 Version: 0.0.0.9000
 Authors@R: 
-    person("Cyril", "Geismar", , "c.geismar21@imperial.ac.uk", role = c("aut", "cre"),
+    person("Cyril", "Geismar", , "c.geismar21@imperial.ac.uk", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Implements statistical methods for comparing posterior distributions 
     of transmission and phylogenetic trees using permutational multivariate 
